# tf-idf-matcher-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
src/: lib.rs  tests.rs  vectorizer.rs
