[package]
name = "tf-idf-matcher"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
#linfa-preprocessing = { version = "0.7.1", default-features = false }
linfa-preprocessing = { git = "https://github.com/kakserpom/linfa.git", branch = "linfa-preprocessing-multi-threading", default-features = false }
ndarray = "0.15"
sprs = "0.11"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "benchmark"
harness = false
