[package]
name = "tf-idf-matcher"
version = "0.2.0"
edition = "2024"
description = "Approximate string matching using n-gram TF-IDF vectorization and cosine similarity"
license = "MIT"
repository = "https://github.com/kakserpom/tf-idf-matcher-rs"
documentation = "https://docs.rs/tf-idf-matcher"
readme = "README.md"
keywords = ["tf-idf", "string-matching", "fuzzy", "cosine-similarity", "ngram"]
categories = ["text-processing", "algorithms"]

[workspace]

[dependencies]
sprs = "0.11"
unicode-normalization = "0.1"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "benchmark"
harness = false
